--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>Final da Champions: Real x Barça</h1>
-    <p>Clique no emoji de quantos gols o Barça vai fazer:</p>
+    <p>duvido clicar no saldo de gols que o Barça vai fazer:</p>
     
     <button class="emoji-btn" onclick="checkGoal(0)">0️⃣</button>
     <button class="emoji-btn" onclick="checkGoal(1)">1️⃣</button>
